src/test/deca/context/invalid/DoubleDeclParam.deca
class A{
  void f(int x, int x){
  }
}
